--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "mongose": "^0.0.2-security",
     "ollama": "^0.5.12",
     "postman": "^0.2.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "nodemon": "^3.1.9"
   }
 }
